# place

./: .a.sh  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  hugo.toml  nginx.conf  pyproject.toml
.github/workflows/: docker.yml  hugo.yml  lint.yml  release.yml
backend/Place.Api/: .editorconfig  Directory.Build.props  Directory.Packages.props  Place.Api.sln  global.json
content/posts/: _index.md
content/posts/2026/: 01-13__iclai-mbalmayo.md  04-06__gdg-bamenda-ace-session-4.md  04-11__librelocal-douala.md  04-13__gdg-bamenda-ace-session-5.md  04-20__gdg-bamenda-ace-session-6.md  05-01__africa-datacenters-cloud-days.md  05-16__build-with-ai-buildathon-bamenda.md  06-01__ai-conference-yaounde.md  10-01__e-gova-yaounde.md  10-01__its26-summit-cameroon.md  11-01__digital-tech-conference-cameroon.md
layouts/_default/: list.ics  single.html  single.ics
layouts/partials/: actions.html  footer.html
layouts/partials/content/: social-media.html
place/: manage.py
place/accounts/: forms.py  models.py
place/core/: admin.py  dummy_data.py  models.py  urls.py  views.py
place/core/migrations/: 0001_initial.py  0002_alter_category_options_alter_event_options_and_more.py  0003_remove_event_categories_event_category.py
place/place/: asgi.py  settings.py  urls.py  wsgi.py
place/templates/: 403_csrf.html  404.html  500.html  _base.html  base.html
place/templates/account/: login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  (+2 more)
(+47 files in other folders)
