[project]
name = "place"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crispy-bootstrap5~=2025.4",
    "django~=5.2",
    "django-allauth[openid,socialaccount]~=65.7",
    "django-debug-toolbar~=5.2",
    "pillow~=11.2",
    "whitenoise~=6.9",
]

[dependency-groups]
prod = [
    "gunicorn~=23.0",
    "uvicorn~=0.34",
    "uvicorn-worker~=0.3",
]
dev = [
    "djlint>=1.36.4",
    "ruff>=0.11.6",
]
